--- a/auto/ansible/tasks/read_build_configuration.yml
+++ b/auto/ansible/tasks/read_build_configuration.yml
@@ -17,8 +17,9 @@
     listen_ipv4: "{{ 'listen_ipv4' in item and item.listen_ipv4 }}"
     outgoing_ipv4: "{{ 'outgoing_ipv4' in item and item.outgoing_ipv4 }}"
     outgoing_ipv6: "{{ 'outgoing_ipv6' in item and item.outgoing_ipv6 }}"
-    software_sname: "{{ item.name.split('-')[0] }}"
-    ready2run: "{{ item.name.split('-')[0] in ['bind', 'unbound', 'pdns'] }}"
+    cfg: "{{ item.cfg | default({}) }}"
+    software_sname: "{{ item.name.rsplit('-', 1)[0] }}"
+    ready2run: "{{ item.name.rsplit('-', 1)[0] in ['bind', 'unbound', 'pdns-recursor'] }}"
     # This is needed when delegate_to is used to preserve the hostname
     # since Ansible uses the delegate_to hostname as the inventory_hostname
     software_name: "{{ item.name }}"
