Add luajit for knot-resolver

--- a/auto/ansible/provision_resolvers-vm.yml
+++ b/auto/ansible/provision_resolvers-vm.yml
@@ -57,6 +57,7 @@
           - libsystemd-dev
           - liblmdb-dev
           - ninja-build
+          - luajit
           - libboost-test-dev
         state: present
         update_cache: yes
