--- a/auto/ansible/select-scenario-on-root-servers.yml
+++ b/auto/ansible/select-scenario-on-root-servers.yml
@@ -124,7 +124,7 @@
       dest: "{{ software_target_dir }}/etc/{{ software_type }}/{{ software_type }}.conf"
     vars:
       software_name: "{{ item.0.name }}"
-      software_type: "{{ item.0.name | split('-', 1) | first }}"
+      software_type: "{{ item.0.name.rsplit('-', 1)[0] }}"
       software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ item.0.name }}"
       cfg: "{{ item.0.cfg }}"
       listen_addrs:
@@ -141,7 +141,7 @@
       dest: "{{ software_target_dir }}/etc/{{ software_type }}/{{ software_type }}.conf"
     vars:
       software_name: "{{ build_config.software.0.name }}"
-      software_type: "{{ build_config.software.0.name | split('-', 1) | first }}"
+      software_type: "{{ build_config.software.0.name.rsplit('-', 1)[0] }}"
       software_target_dir: "{{ BUILD_TARGET_DIR }}/{{ build_config.software.0.name }}"
       cfg: "{{ build_config.software.0.cfg }}"
       listen_addrs: "{{ network_configuration.networks.0.v4.alias | map('dirname') }}"
